@@ -98,19 +98,22 @@ public class B2DirectoryFeature implements Directory<BaseB2Response> {
     @Override
     public boolean isSupported(final Path workdir, final String name) {
         if(workdir.isRoot()) {
-            // Bucket names must be a minimum of 6 and a maximum of 50 characters long, and must be globally unique;
-            // two different B2 accounts cannot have buckets with the name name. Bucket names can consist of: letters,
-            // digits, and "-". Bucket names cannot start with "b2-"; these are reserved for internal Backblaze use.
-            if(StringUtils.startsWith(name, "b2-")) {
-                return false;
+            // Empty argument if not known in validation
+            if(StringUtils.isNotBlank(name)) {
+                // Bucket names must be a minimum of 6 and a maximum of 50 characters long, and must be globally unique;
+                // two different B2 accounts cannot have buckets with the name name. Bucket names can consist of: letters,
+                // digits, and "-". Bucket names cannot start with "b2-"; these are reserved for internal Backblaze use.
+                if(StringUtils.startsWith(name, "b2-")) {
+                    return false;
+                }
+                if(StringUtils.length(name) > 50) {
+                    return false;
+                }
+                if(StringUtils.length(name) < 6) {
+                    return false;
+                }
+                return StringUtils.isAlphanumeric(StringUtils.removeAll(name, "-"));
             }
-            if(StringUtils.length(name) > 50) {
-                return false;
-            }
-            if(StringUtils.length(name) < 6) {
-                return false;
-            }
-            return StringUtils.isAlphanumeric(StringUtils.removeAll(name, "-"));
         }
         return true;
     }
