@@ -97,6 +97,8 @@
     <li><span class="label label-warning">Bugfix</span> Application error when opening connection (DRACOON) (Windows
         Store)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Disabled menu item to create new container (Azure)</li>
+    <li><span class="label label-warning">Bugfix</span> Disabled menu item to create new bucket (Backblaze B2)</li>
 </ul>
 
 <p>
